* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.2
  - Default group_type to GROUP_TYPE env variable if it
    isn't set.

* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.1
  - Update rake tasks so they call init correctly.

* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.0
  - Add provider for OpenStack.
  - Add bin/kytoon with commands corresponding to rake tasks.
  - Move rake tasks under 'kytoon' namespace (previously used 'group').
  - Updates to raise KytoonException instead of just raise.
  - Rename gateway_ip task to just ip.

* Thu Aug 23 2012 Dan Prince <dprince@redhat.com> - 1.1.1
  - Add 'libvirt_use_sudo' option to config file.
  - Move config parameter checks into specific providers.

* Wed Aug 22 2012 Dan Prince <dprince@redhat.com> - 1.1.0
  - Add local libvirt provider based on virt-clone.
  - Libvirt: Support creating qcow2 disks during group creation.

* Fri Jul 27 2012 Dan Prince <dprince@redhat.com> - 1.0.2
  - XenServer: Use force=true when shutting down VMs.

* Mon Jul 23 2012 Dan Prince <dprince@redhat.com> - 1.0.1
  - Update ServerGroup to call init in all methods. Fixes NilClass errors
    which can occur if you don't explicitly call 'group::init' in rake tasks.
  - XenServer: Automatically add IP to bridge.

* Sun Jul 22 2012 Dan Prince <dprince@redhat.com> - 1.0.0
  - Initial release. Based on Chef VCP Toolkit.