@@ -1,3 +1,7 @@
+* Thu Sep 20 2012 Dan Prince <dprince@redhat.com> - 1.2.3
+  - XenServer: Use vm-clone once a vm has been imported to speed up
+    group creation.
+
 * Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.2
   - Default group_type to GROUP_TYPE env variable if it
     isn't set.
